name:                simple-befunge
version:             0.1.0.0
synopsis:            A simple interpreter for Befunge-98.
description:         A simple interpreter for Befunge-98.
license:             BSD3
license-file:        LICENSE
author:              Getty Ritter
maintainer:          gettylefou@gmail.com
copyright:           © 2015 Getty Ritter
category:            Language
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/aisamanra/simple-befunge.git

executable befunge
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       transformers,
                       mtl,
                       array,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010